<resources>
    <string name="app_name">HealthyLifeStyleApp</string>
    @string/Label_Account
    <string name="Label_Heading">Healthy Lifestyle</string>
    <string name="Label_Account">Create a \nNew Account</string>
    <string name="Label_BestExperince">For the best experience \nwith App</string>
    <string name="Label_Sign_up">Sign up</string>
    <string name="Label_Login">Log In</string>
    <string name="Label_SignupEmail">Signup with Email </string>
    <string name="Label_SignupPhone">Signup with Phone Number </string>
    <string name="Label_Username">User Name</string>
    <string name="Label_Password">Password</string>
    <string name="Label_Email">Email</string>
    <string name="Label_Phone">Mobile Number</string>
    <string name="Label_GetStarted">Get Started</string>
    <string name="Label_Physiques">Enter Your Physiques</string>
    <string name="Label_Age">Age</string>
    <string name="Label_Height">Height</string>
    <string name="Label_Weight">Weight</string>
    <string name="Label_Level">Level</string>
    <string name="Label_Settings">Settings</string>
    <string name="Label_Profile">Profile</string>
    <string name="Label_LanguageOptions">Language Options</string>
    <string name="Label_Language">Language</string>
    <string-array name="language_option">
        <item>English</item>
        <item>Hindi</item>
        <item>Spanish</item>
    </string-array>
    <string name="Label_HeathData">Health data</string>
    <string name="Label_createPlans">Create Plan</string>
    <string name="Label_referFriend">Refer Friend</string>
    <string name="Label_Feedback">Feedback</string>
    <string name="Label_LogOut">LogOut</string>
    <string name="Label_SelectLevel">Select your Level</string>
    <string name="Label_Beginner">Beginner</string>
    <string name="Label_Advance">Advance</string>
    <string name="Label_Intermidiate">Intermediate</string>
    <string name="Label_SelectWeight">Select your weight</string>
    <string name="Label_SelectHeight">Select your Height</string>
    <string name="Label_SelectAge">Select your Age</string>
    <string name="Label_ConfiemDetails">Confirm Details</string>
    <string name="Label_Finish">Finish</string>
    <string name="Label_CompletedTask">Completed Task</string>
    <string name="Label_Goals">Goals</string>
    <string name="Label_Reminders">Reminders</string>
    <string name="Label_Plans">Plans</string>
    <string name="Label_FitnessDevice">Fitness Device</string>
    <string name="Label_Drink">DRINK</string>
    <string name="Label_Food">FOOD</string>
    <string name="Label_Sleep">Sleep</string>
    <string name="Label_DailyGoal">Daily Goal</string>
    <string name="Label_CupSize">Cup Size</string>
    <string name="Label_Reminder">Water Reminder</string>
    <string name="Label_Time">Time Interval</string>
    <string name="Label_Start">Start</string>
    <string name="Label_End">End</string>
    <string name="Label_Looosemass">Loose Mass</string>
    <string name="Label_date">May 14-jun13</string>
    <string name="Label_Gainmass">Gain Mass</string>
    <string name="Label_MealPlan">Meal Plan</string>
    <string name="Label_Breakfast">Breakfast</string>
    <string name="Label_personalizedData">Personalized workout will help \n you gain Strength</string>
    <string name="Label_SeeMore">See More</string>
    <string name="Label_Snack">Snack</string>
    <string name="Label_SleepReminder">Sleep Reminder</string>
    <string name="Label_Activity">Activity</string>
    <string name="Label_AddActivity">Add Activity</string>
    <string name="Label_AddNewActivity">Add New Activity</string>
    <string name="Label_forgot">Forget password ?</string>


    <string name="Label_Workput">Workput</string>
    <string name="Label_Dinner">Dinner</string>
    <string name="Label_Lunch">Lunch</string>
    <string name="Label_Water">Water</string>

    <string name="Label_DailyAgenda">Daily Agenda</string>
    <string name="Label_PrivacyPolicy">Privacy Policy</string>
    <string name="Label_Article1">Article 1</string>
    <string name="Label_whoMayUse">Who May Use The Serivce</string>
    <string name="Label_Privacy">Privacy</string>
    <string name="Label_SureLogout">Are you sure want to logout?</string>
    <string name="Label_No">No</string>
    <string name="Label_Yes">Yes</string>
    <string name="Label_Close">Close</string>
    <string name="Label_PrivacyData">When one door of happiness closes, another opens, but often we look so long at the closed door that we do not see the one taht has been opened for us.
    \n\t Step 1:You may use the Srvices only if you agree to form a binding contract with us and are not a person barred from receiving services under the laws of the applicable jurisdiction. \n\t Step 2:Our privacy Policy describes hoe we handle the infromation you provide to us when you use our services. </string>
    <string name="Label_PrivacyData1">When one door of happiness closes, another opens, but often we look so long at the closed door that we do not see the one taht has been opened for us.
    </string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_plans">Plans</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_logout">LogOut</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Label_ProgressStaticData">Lorem ipsum dolor sit amet, consectetur adipisicing elite, sed do</string>
    <string name="Label_EnterName">Enter Your Name Here</string>
    <string name="Label_EnterEmail"> Enter Your Email Id</string>
    <string name="Label_EnterPhone"> Enter Mobile No.</string>
    <string name="Label_SelectProfile"> Select Profile Picture</string>
    <string name="Label_Save">Save</string>
    <string name="Label_Skip">Skip</string>
    <string name="Label_fillDetails"> Please Fill the details</string>
    <string name="Label_SundayDate">Sunday,Aug 26</string>
    <string name="Label_GetCode">Get Verification Code</string>
    <string name="Label_ManageData">Manage My Data</string>
    <string name="Label_MyFitnessLevel">My Fitness Level</string>
    <string name="Label_RestartbasicPlan">Restart Basic Plan</string>
    <string name="facebook_app_id">2476754999088180</string>
    <string name="fb_login_protocol_scheme">fb2476754999088180</string>
    <string name="title_activity_recipes_tab">RecipesTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Label_Connect">Connect to Device</string>
    <string name="Label_GoogleFit">Google Fit</string>
    <string name="Label_Connect1">Connect</string>
    <string name="Label_OtherDevice">Other Device</string>
    <string name="Label_Find">Find</string>
    <string name="Label_Instructions">Instructions</string>
    <string name="Label_Ingrediants">Ingrediants</string>
    <string name="Label_HealthTips">Health Tips</string>
    <string name="Label_Diet">A Diet Without Exercise is Useless</string>
    <string name="Label_Tips">1)Interval Training is a form of exercise in which you alternate between two or more different exercise . This consist of doing an exercise at a very high level intensity for a short bursts
    \n2) Some high intensity interval training is a great way to burn calories and loose weight.
    \n3)Another great thing is about inteval training is that it is extremly time efficient . it does not make any time to get into shape when you practice high intensity interval training.
    \n4)Execise, especially high intensity interval training is awesome beacuse it keeps you</string>
    <string name="Label_send_feedback">Send feedback</string>

    <string name="Label_feedback_email">YourEmailAdress</string>
    <string name="Label_feedback_subject">Feedback on your app</string>
    <string name="Label_feedback_message">Your Feedback message</string>


</resources>
