<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmDetailsActivity"
    android:orientation="vertical">
    <android.support.v7.widget.AppCompatTextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/Label_Physiques"
        android:textColor="@color/colorBlack1"
        android:textSize="22dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_layout"
        android:orientation="horizontal"
        android:weightSum="10">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/AppCompatTextViewAge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textColor="@color/colorBlack"

            android:gravity="center"
            android:text="@string/Label_Age"
            android:textSize="20dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/AppCompatTextViewNewAge"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_weight="5"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="@string/Label_Age"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_layout"
        android:orientation="horizontal"
        android:weightSum="10">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/AppCompatTextViewHeight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textColor="@color/colorBlack"

            android:gravity="center"
            android:text="@string/Label_Height"
            android:textSize="20dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/AppCompatTextViewNewHeight"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_weight="5"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="@string/Label_Height"
            android:textSize="20dp" />
    </LinearLayout> <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="38dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/background_layout"
    android:orientation="horizontal"
    android:weightSum="10">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/AppCompatTextViewWeight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:textColor="@color/colorBlack"

        android:gravity="center"
        android:text="@string/Label_Weight"
        android:textSize="20dp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/AppCompatTextViewNewWeight"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_weight="5"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:text="@string/Label_Weight"
        android:textSize="20dp" />
</LinearLayout> <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="38dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/background_layout"
    android:orientation="horizontal"
    android:weightSum="10">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/AppCompatTextViewLevel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:textColor="@color/colorBlack"

        android:gravity="center"
        android:text="@string/Label_Level"
        android:textSize="20dp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/AppCompatTextViewNewLevel"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_weight="5"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:text="@string/Label_Level"
        android:textSize="20dp" />
</LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Label_ConfiemDetails"
        android:textAllCaps="false"
        android:background="@drawable/background_layout"/>
</LinearLayout>