<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
  >

    <RelativeLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBlack">

    <LinearLayout
        android:id="@+id/llHeader1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Label_Heading"
            android:textColor="@color/colorYellow"
            android:textSize="25dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorYellow" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/Label_Account"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <View
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Label_BestExperince" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:weightSum="10">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/AppCompatTextViewSignUp"
                style="@style/TextViewClick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/Label_Sign_up" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/AppCompatTextViewLogin"
                style="@style/TextViewClick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/Label_Login" />
        </LinearLayout>


        <fragment
            android:layout_marginTop="10dp"
            android:id="@+id/fragment_place"
            android:name="com.example.healthylifestyleapp.FragmentSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center">
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
           />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
    </ScrollView>